--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,7 +3,15 @@
 <p>
   <strong>Url:</strong>
   <%= @post.url %>
+
 </p>
+
+  <% object = LinkThumbnailer.generate(@post.url)%>
+  <p><%= object.title%></p>
+  <p><%= object.description%></p>
+<img src="<%= object.images.first.src%>"/>
+
+
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
