--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,19 +9,28 @@
     </head>
 
     <body>
-      <div id="container">
-        <div id="user_nav">
-          <% if current_user %>
-            Signed in as <strong><%= current_user.name %></strong>!
-            <%= link_to "Sign out", signout_path, id: "sign_out" %>
-          <% else %>
-            <%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %>
-          <% end %>
-        </div>
 
+      <div id="container">
+
+        <div id="user_nav">
+        <ul>
+
+       <% if user_signed_in? %>
+         <li id="email"> <%= current_user.email %></li>
+            <li> <%= link_to 'sign_out', destroy_user_session_path, :method=>'delete' %></li>
+        <% else %>
+            <li> <%= link_to 'sign_in', new_user_session_path %> </li>
+            <li> <%= link_to 'sign_up', new_user_registration_path %> </li>
+        <% end %>
+      </ul>
+
+        </div>
         <% flash.each do |name, msg| %>
           <%= content_tag :div, msg, id: "flash_#{name}" %>
         <% end %>
+        <p class="notice"><%= notice %></p>
+       <p class="alert"><%= alert %></p>
+
         <%= yield %>
       </div>
     </body>
