--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,2 +1,8 @@
-<h1>Home#show</h1>
-<p>Find me in app/views/home/show.html.erb</p>
+<h1>Bookmarks App</h1>
+<p>Login with Facebook only.</p>
+<p>Ability to add boockmark(URL)</p>
+<p>After user enters the url he should see the preview(screenshot of the page)</p>
+<p>User should be able to search by url</p>
+<p>User should be able to paginate the bookmarks</p>
+<p>User should see his friends and their bookmarks</p>
+<p>Everything should be live and deployed to heroku</p>
