--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,26 +2,18 @@
 
 <h1>Posts</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Url</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.url %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Post', new_post_path %>
+<button class="btn btn-primary" id="add_post" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+  Add New Post
+</button>
+<br />
+<div class="collapse" id="collapseExample">
+  <div class="well">
+    <%= render 'form' %>
+  </div>
+</div>
+<center><%= paginate @posts, theme: 'twitter-bootstrap-4', pagination_class: "pagination-sm" %></center>
+<div id="post_holder">
+  <% @posts.each do |post| %>
+      <%= render 'row', post: post %>
+  <% end %>
+</div>
