--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,29 +9,78 @@
     </head>
 
     <body>
+            <nav class="navbar navbar-default" role="navigation">
 
-      <div id="container">
+                            <!-- Brand and toggle get grouped for better mobile display -->
+                            <div class="navbar-header">
+                                <div class="navbar-brand navbar-brand-centered"><%= link_to 'Exam GeekHub', '/' %></div>
+                            </div>
 
-        <div id="user_nav">
-        <ul>
+                            <!-- Collect the nav links, forms, and other content for toggling -->
+                            <div class="collapse navbar-collapse" id="navbar-brand-centered">
+                                <ul class="nav navbar-nav">
+                                    <li>
+                                        <a href="#">Ruby on Rails</a>
+                                    </li>
+                                </ul>
+                                <ul class="nav navbar-nav navbar-right">
 
-       <% if user_signed_in? %>
-         <li id="email"> <%= current_user.email %></li>
-            <li> <%= link_to 'sign_out', destroy_user_session_path, :method=>'delete' %></li>
-        <% else %>
-            <li> <%= link_to 'sign_in', new_user_session_path %> </li>
-            <li> <%= link_to 'sign_up', new_user_registration_path %> </li>
-        <% end %>
-      </ul>
+                                    <% if user_signed_in? %>
+                                    <li id="email"><p class="navbar-text">Signed in as
+                                                    <%= current_user.email %>
+                                                  </p>
+                                    </li>
+                                    <li class="dropdown">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Task
+                                            <span class="caret"></span>
+                                        </a>
+                                        <ul class="dropdown-menu" role="menu">
+                                            <li>
+                                                <%= link_to 'Update profile', edit_user_password_path %>
+                                            </li>
+                                            <li>
+                                                <%= link_to 'Posts', posts_path%>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li><%= link_to "Log out", destroy_user_session_path, :method=>'delete'  %></li>
+                                </ul>
+                            <% else %>
+                                <ul class="nav navbar-nav navbar-right">
 
-        </div>
-        <% flash.each do |name, msg| %>
-          <%= content_tag :div, msg, id: "flash_#{name}" %>
-        <% end %>
-        <p class="notice"><%= notice %></p>
-       <p class="alert"><%= alert %></p>
+                                    <li><%= link_to 'Log in', user_facebook_omniauth_authorize_path %></li>
+                                    <li><%= link_to 'Sign up', new_user_registration_path %></li>
 
-        <%= yield %>
-      </div>
-    </body>
+                                </ul>
+                                <% end %>
+
+                            </div>
+                            <!-- /.navbar-collapse -->
+
+                        <!-- /.container-fluid -->
+                    </nav>
+                    <div class="container">
+                        <%= yield %>
+                    </div>
+                </body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        </body>
 </html>
