--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,12 +6,8 @@
 
 </p>
 
-  <p><%= @link.title%></p>
-  <p><%= @link.description%></p>
-<img src="<%= @link.images.first.src%>"/>
-
+<img src='<%= @post.screenshot_url %>'/>
 
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
-<%= content_tag(:div, "Hello world!", class: ["strong", "highlight"]) %>
