--- a/app/views/posts/_row.html.erb
+++ b/app/views/posts/_row.html.erb
@@ -4,6 +4,7 @@
 <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter sprinkle">
   <div class="col-md-9">
     <h3><%= post.user.try(:name) %></h3>
+    <%= link_to '', post.url, class: 'link' %>
   </div>
   <div class="col-md-3">
     <% if current_user.id == post.user_id %>
